--- a/others/index.html
+++ b/others/index.html
@@ -6,23 +6,23 @@
     <meta name="description" content="(特に応用系の)数学についての解説, 日々の記録などを書いていく予定です. 競プロについても書くかもしれないです. まだまだ全然開発段階です. ">
     <meta name="keywords" content="数学, 競プロ, まぐすた">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="../stylesheet.css">
   </head>
   <body>
     <header>
-      <h1 id="logo"><a href="index.html">まぐすたのホームページ</a></h1>
+      <h1 id="logo"><a href="../index.html">まぐすたのホームページ</a></h1>
     </header>
     <div class="row">
       <aside>
         <nav>
           <ul class="indent">
-            <li><h1 id="menu_title"><a href="math/index.html">&emsp;数学</a></h1>
+            <li><h1 id="menu_title"><a href="../math/index.html">&emsp;数学</a></h1>
             <ul>
-              <li><h1 id="menu_subtitle"><a href="math/index.html">&ensp;半正定値行列</a></h1></li>
+              <li><h1 id="menu_subtitle"><a href="../math/index.html">&ensp;半正定値行列</a></h1></li>
             </ul></li>
-            <li><h1 id="menu_title"><a href="comp_program/index.html">&emsp;競プロ</a></h1></li>
-            <li><h1 id="menu_title"><a href="diary/index.html">&emsp;日記</a></h1></li>
-            <li><h1 id="menu_title"><a href="others/index.html">&emsp;その他</a></h1></li>
+            <li><h1 id="menu_title"><a href="../comp_program/index.html">&emsp;競プロ</a></h1></li>
+            <li><h1 id="menu_title"><a href="../diary/index.html">&emsp;日記</a></h1></li>
+            <li><h1 id="menu_title"><a href="../others/index.html">&emsp;その他</a></h1></li>
           </ul>
         </nav>
       </aside>
