--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <meta name="description" content="(特に応用系の)数学についての解説, 日々の記録などを書いていく予定です. 競プロについても書くかもしれないです. まだまだ全然開発段階です. ">
     <meta name="keywords" content="数学, 競プロ, まぐすた">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <header>
-      <h1 id="logo"><a href="index.html">まぐすたのホームページ</a></h1>
-    </header>
+    <header id="header"></header>
     <div class="row">
       <aside>
         <nav>
@@ -35,5 +33,6 @@
         </p>
       </main>
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
