--- a/comp_program/index.html
+++ b/comp_program/index.html
@@ -21,6 +21,6 @@
         </p>
       </main>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
