--- a/comp_program/index.html
+++ b/comp_program/index.html
@@ -9,9 +9,23 @@
     <link rel="stylesheet" href="../stylesheet.css">
   </head>
   <body>
-    <header id="header"></header>
+    <header>
+      <h1 id="logo"><a href="../index.html">まぐすたのホームページ</a></h1>
+    </header>
     <div class="row">
-      <aside id="aside"></aside>
+      <aside>
+        <nav>
+          <ul class="indent">
+            <li><h1 id="menu_title"><a href="../math/index.html">&emsp;数学</a></h1>
+            <ul>
+              <li><h1 id="menu_subtitle"><a href="../math/index.html">&ensp;半正定値行列</a></h1></li>
+            </ul></li>
+            <li><h1 id="menu_title"><a href="../comp_program/index.html">&emsp;競プロ</a></h1></li>
+            <li><h1 id="menu_title"><a href="../diary/index.html">&emsp;日記</a></h1></li>
+            <li><h1 id="menu_title"><a href="../others/index.html">&emsp;その他</a></h1></li>
+          </ul>
+        </nav>
+      </aside>
       <main>
         <p>
           まぐすたのホームページです. 
