--- a/header.html
+++ b/header.html
@@ -1,1 +1,3 @@
-<h1 id="logo"><a href="index.html">まぐすたのホームページ</a></h1>
+<header>
+    <h1 id="logo"><a href="index.html">まぐすたのホームページ</a></h1>
+</header>
