--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <div id="header"></div>
+    <header>
+      <div id="header"></div>
+    <header>
     <div class="row">
       <aside>
         <nav>
