--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div id="header"></div>
-    <header>
+    </header>
     <div class="row">
       <aside>
         <nav>
