--- a/comp_program/index.html
+++ b/comp_program/index.html
@@ -26,10 +26,10 @@
       </main>
     </div>
     <script>
-      fetch("header.html")
+      fetch("../header.html")
         .then((response) => response.text())
         .then((data) => document.querySelector("#header").innerHTML = data);
-      fetch("aside.html")
+      fetch("../aside.html")
         .then((response) => response.text())
         .then((data) => document.querySelector("#aside").innerHTML = data);
     </script>
