--- a/aside.html
+++ b/aside.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="indent">
-        <li><h1 id="menu_title"><a href="math/index.html">&emsp;数学</a></h1>
+        <li><h1 id="menu_title"><a href="https://xxxmagstaxxx.github.io/comp_program/math/index.html">&emsp;数学</a></h1>
         <ul>
             <li><h1 id="menu_subtitle"><a href="math/index.html">&ensp;半正定値行列</a></h1></li>
         </ul></li>
