--- a/others/index.html
+++ b/others/index.html
@@ -10,21 +10,11 @@
   </head>
   <body>
     <header>
-      <h1 id="logo"><a href="../index.html">まぐすたのホームページ</a></h1>
+      <div id="header"></div>
     </header>
     <div class="row">
       <aside>
-        <nav>
-          <ul class="indent">
-            <li><h1 id="menu_title"><a href="../math/index.html">&emsp;数学</a></h1>
-            <ul>
-              <li><h1 id="menu_subtitle"><a href="../math/index.html">&ensp;半正定値行列</a></h1></li>
-            </ul></li>
-            <li><h1 id="menu_title"><a href="../comp_program/index.html">&emsp;競プロ</a></h1></li>
-            <li><h1 id="menu_title"><a href="../diary/index.html">&emsp;日記</a></h1></li>
-            <li><h1 id="menu_title"><a href="../others/index.html">&emsp;その他</a></h1></li>
-          </ul>
-        </nav>
+        <div id="aside"></div>
       </aside>
       <main>
         <p>
@@ -35,5 +25,13 @@
         </p>
       </main>
     </div>
+    <script>
+      fetch("../header.html")
+        .then((response) => response.text())
+        .then((data) => document.querySelector("#header").innerHTML = data);
+      fetch("../aside.html")
+        .then((response) => response.text())
+        .then((data) => document.querySelector("#aside").innerHTML = data);
+    </script>
   </body>
 </html>
