--- a/header.html
+++ b/header.html
@@ -1,1 +1,1 @@
-<h1 id="logo"><a href="https://xxxmagstaxxx.github.io/comp_program/index.html">まぐすたのホームページ</a></h1>
+<h1 id="logo"><a href="https://xxxmagstaxxx.github.io/index.html">まぐすたのホームページ</a></h1>
