--- a/math/positive_definite.html
+++ b/math/positive_definite.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <title>まぐすたのホームページ</title>
     <meta name="description" content="(特に応用系の)数学についての解説, 日々の記録などを書いていく予定です. 競プロについても書くかもしれないです. まだまだ全然開発段階です. ">
-    <meta name="keywords" content="数学, 競プロ, まぐすた">
+    <meta name="keywords" content="まぐすた, 数学, 正定値, 半正定値, 正定値行列, 半正定値行列">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../stylesheet.css">
+    <script type="text/javascript" asyncsrc="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=MML_SVG"></script>
   </head>
   <body>
     <header>
@@ -18,10 +19,12 @@
       </aside>
       <main>
         <p>
-          まぐすたのホームページです. 
+          正定値行列/半正定値行列について議論していく. 
+          正定値行列/半正定値行列は以下の様にして定義される. 
         </p>
         <p>
-          (特に応用系の)数学についての解説, 日々の記録などを書いていく予定です. 競プロについても書くかもしれないです. まだまだ全然開発段階です.
+          \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\) で \(x^TAx\geq0\) を満たすとき, 
+          \(A\) を半正定値行列という. 
         </p>
       </main>
     </div>
