--- a/math/positive_definite.html
+++ b/math/positive_definite.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="まぐすた, 数学, 正定値, 半正定値, 正定値行列, 半正定値行列">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../stylesheet.css">
-    <script type="text/javascript" asyncsrc="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=MML_SVG"></script>
+    <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   </head>
   <body>
     <header>
