--- a/math/positive_definite.html
+++ b/math/positive_definite.html
@@ -19,13 +19,30 @@
       </aside>
       <main>
         <p>
-          正定値行列/半正定値行列について議論していく. 
-          正定値行列/半正定値行列は以下の様にして定義される. 
+          (半)正定値対称行列/(半)負定値対称行列について議論していく. 
+          (半)正定値対称行列/(半)負定値対称行列は以下の様にして定義される. 
         </p>
-        <p>
-          \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\) で \(x^TAx\geq0\) を満たすとき, 
-          \(A\) を半正定値行列という. 
-        </p>
+        <div class="block">
+          <p>
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\) が \(x^TAx\geq0\) を満たすとき, 
+            \(A\) を半正定値対称行列という. 
+          </p>
+          <p>
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx$gt;0\) を満たすとき, 
+            \(A\) を正定値対称行列という. 
+          </p>
+          <p>
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\) が \(x^TAx\leq0\) を満たすとき, 
+            \(A\) を半負定値対称行列という. 
+          </p>
+          <p>
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx$lt;0\) を満たすとき, 
+            \(A\) を負定値対称行列という. 
+          </p>
+          <p>
+            ただし, \(\mathbb{R}^{n\times n}\) は大きさ \(n\) の行列の集合のことである. 
+          </p>
+        </div>
       </main>
     </div>
     <script>
