--- a/math/positive_definite.html
+++ b/math/positive_definite.html
@@ -28,7 +28,7 @@
             \(A\) を半正定値対称行列という. 
           </p>
           <p>
-            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx$gt;0\) を満たすとき, 
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx>0\) を満たすとき, 
             \(A\) を正定値対称行列という. 
           </p>
           <p>
@@ -36,7 +36,7 @@
             \(A\) を半負定値対称行列という. 
           </p>
           <p>
-            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx$lt;0\) を満たすとき, 
+            対称行列 \(A\in\mathbb{R}^{n\times n}\) に対し, 任意の \(x\in\mathbb{R}^n\backslash\{0\}\) が \(x^TAx<0\) を満たすとき, 
             \(A\) を負定値対称行列という. 
           </p>
           <p>
