--- a/aside.html
+++ b/aside.html
@@ -2,7 +2,7 @@
     <ul class="indent">
         <li><h1 id="menu_title"><a href="https://xxxmagstaxxx.github.io/math/index.html">&emsp;数学</a></h1>
         <ul>
-            <li><h1 id="menu_subtitle"><a href="https://xxxmagstaxxx.github.io/math/positive_definite.html">&ensp;半正定値行列</a></h1></li>
+            <li><h1 id="menu_subtitle"><a href="https://xxxmagstaxxx.github.io/math/positive_definite.html">&ensp;行列の定値性</a></h1></li>
         </ul></li>
         <li><h1 id="menu_title"><a href="https://xxxmagstaxxx.github.io/comp_program/index.html">&emsp;競プロ</a></h1></li>
         <li><h1 id="menu_title"><a href="https://xxxmagstaxxx.github.io/diary/index.html">&emsp;日記</a></h1></li>
