--- a/math/positive_definite.html
+++ b/math/positive_definite.html
@@ -18,8 +18,16 @@
         <div id="aside"></div>
       </aside>
       <main>
+        <h1 class="title">
+          行列の定値性
+        </h1>
         <p>
           (半)正定値対称行列/(半)負定値対称行列について議論していく. 
+        </p>
+        <h1><u>
+          定義
+        </u></h1>
+        <p>
           (半)正定値対称行列/(半)負定値対称行列は以下の様にして定義される. 
         </p>
         <div class="block">
